# python-docker-app

./: .Dockerfile.un~  .main.py.un~  Dockerfile  Dockerfile~  README.md  pyproject.toml  requirement.txt  uvilog.py
app/: .main.py.un~  main.py  main.py~  mylogger.py
